[css-typed-om] Sort properties which is from iterator

Sort properties which is from iterator of StylePropertyMapReadOnly
According to spec,
* normal properties are sorted alphabetically.
* custom properties are sorted by increasing code point order.
* custom properties are sorted after normal properties.

present, normal properties has always lower case.
so to sort alphabetical is same effect with sorting code point

https://drafts.css-houdini.org/css-typed-om-1/#dom-stylepropertymap-getproperties

Bug: 779841
Change-Id: I7532cf2e322073705db2c124fa12116fc38f2345
Reviewed-on: https://chromium-review.googlesource.com/808746
Reviewed-by: Darren Shen <shend@chromium.org>
Commit-Queue: Hwanseung Lee <hs1217.lee@samsung.com>
Cr-Commit-Position: refs/heads/master@{#523312}
Former-commit-id: 889ebb251addf7c0ffc6ebc8530170a59c91be64